--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 :root{
   --white:#ffffff;
   --glass:rgba(255,255,255,0.12);
+  --bg:#031226;
 }
 *{box-sizing:border-box}
 html,body{
   height:100%;
   width:100%;
   margin:0;
-  background:#031226;
+  background:var(--bg);
   font-family:Poppins,system-ui,Arial;
   overflow:hidden;
   -webkit-tap-highlight-color:transparent;
 }
 
-/* screens */
-.screen{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;opacity:0;pointer-events:none;transition:opacity .45s ease}
+/* base screens */
+.screen{
+  position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;
+  opacity:0;pointer-events:none;transition:opacity .45s ease;
+}
 .screen.active{opacity:1;pointer-events:auto}
 .bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:brightness(.92);z-index:0}
 .wrap{position:relative;z-index:6;width:92%;max-width:960px;margin:0 auto;text-align:center;color:var(--white)}
@@ -30,23 +34,29 @@ html,body{
 #screen1 .wrap{padding-top:12vh}
 .title1{font-size:clamp(20px,6vw,36px);font-weight:900;text-shadow:0 10px 30px rgba(0,20,40,0.7)}
 .subtitle1{font-size:clamp(12px,3.4vw,18px);opacity:.95;margin-top:.4rem}
-.tap-btn{margin-top:1.2rem;padding:.9rem 2.6rem;border-radius:28px;border:0;background:linear-gradient(180deg,rgba(255,255,255,0.08),rgba(255,255,255,0.03));backdrop-filter:blur(6px);box-shadow:0 12px 40px rgba(10,30,60,0.3);color:var(--white);font-weight:800;cursor:pointer;outline:none}
+.tap-btn{
+  margin-top:1.2rem;padding:.9rem 2.6rem;border-radius:28px;border:0;
+  background:linear-gradient(180deg,rgba(255,255,255,0.08),rgba(255,255,255,0.03));
+  backdrop-filter:blur(6px);box-shadow:0 12px 40px rgba(10,30,60,0.3);
+  color:var(--white);font-weight:800;cursor:pointer;outline:none}
 
-/* panels common */
+/* panels (screen2 & screen4) */
 .panel-container{width:92%;height:86%;display:flex;flex-direction:column;gap:18px;padding:3vh 0;justify-content:space-between;z-index:5}
-.panel{height:30%;min-height:100px;border-radius:14px;overflow:visible;position:relative;cursor:pointer;perspective:1200px}
-.panel-inner{position:relative;width:100%;height:100%;transform-style:preserve-3d;transition:transform .9s cubic-bezier(.2,.9,.28,1);border-radius:12px;overflow:hidden;box-shadow:0 16px 50px rgba(0,20,40,0.35)}
+.panel{height:30%;min-height:100px;border-radius:14px;overflow:visible;position:relative;cursor:pointer;perspective:1400px}
+.panel-inner{
+  position:relative;width:100%;height:100%;transform-style:preserve-3d;
+  transition:transform .6s cubic-bezier(.2,.9,.28,1);border-radius:12px;overflow:hidden;
+  box-shadow:0 16px 50px rgba(0,20,40,0.35);
+}
+/* rotated state */
 .panel.flipped .panel-inner{transform:rotateY(180deg)}
 .face{position:absolute;inset:0;backface-visibility:hidden;display:flex;align-items:center;justify-content:center;overflow:hidden}
-.front{z-index:2}
+.front{z-index:2;transform:rotateY(0deg)}
 .front img{width:100%;height:100%;object-fit:cover;display:block}
 .front .overlay-title{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;background:transparent}
-.back{transform:rotateY(180deg);display:flex;align-items:center;justify-content:center;padding:18px;text-align:center;background:rgba(0,0,0,0.2)}
-.back .blur-image{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:blur(10px) brightness(.85);transform:scale(1.02)}
+.back{transform:rotateY(180deg);display:flex;align-items:center;justify-content:center;padding:18px;text-align:center;background:rgba(0,0,0,0.18)}
+.back .blur-image{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:blur(8px) brightness(.85);transform:scale(1.02);z-index:1}
 .back .panel-text{position:relative;z-index:3;font-size:clamp(12px,3vw,18px);line-height:1.45;text-shadow:0 6px 18px rgba(0,0,0,0.6);color:white}
-
-/* small visual polish during half-rotation */
-.panel-inner .front, .panel-inner .back {transition:opacity .3s ease}
 
 /* letter page */
 .letter-wrap{width:92%;max-width:920px;background:rgba(255,255,255,0.06);backdrop-filter:blur(6px);border-radius:14px;padding:26px;color:#fff;box-shadow:0 20px 60px rgba(0,20,40,0.5);z-index:5}
@@ -54,17 +64,14 @@ html,body{
 .letter-text{font-size:clamp(14px,3.4vw,18px);line-height:1.6;white-space:pre-wrap;text-align:left}
 .letter-overlay{position:absolute;inset:0;cursor:pointer;z-index:7}
 
-/* screen5 slideshow */
+/* screen5 slideshow + final lines spacing */
 #slides-wrap{position:absolute;inset:0;z-index:0;overflow:hidden}
 .slide{position:absolute;inset:0;background-size:cover;background-position:center;filter:blur(8px) brightness(.82);opacity:0;transition:opacity 1s ease}
 .slide.show{opacity:1}
-.final-line{color:#fff;font-weight:800;font-size:clamp(18px,4vw,30px);opacity:0;transform:translateY(10px);transition:opacity .9s,transform .9s}
+.final-line{color:#fff;font-weight:800;font-size:clamp(18px,4vw,30px);opacity:0;transform:translateY(10px);transition:opacity .9s,transform .9s;margin:12px 0}
 
-/* responsiveness */
-@media(max-width:420px){
-  .panel{height:28vh}
-  .letter-text{text-align:center}
-}
+/* responsive */
+@media(max-width:420px){ .panel{height:28vh} .letter-text{text-align:center} }
 </style>
 </head>
 <body>
@@ -90,10 +97,10 @@ html,body{
     <div class="panel" id="p2-1">
       <div class="panel-inner">
         <div class="face front">
-          <img src="assets/ima1.jpeg" alt="ima1">
+          <img src="assets/ima1.jpeg" alt="ima1 front">
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/ima1.jpeg" alt="">
+          <img class="blur-image" src="assets/ima1.jpeg" alt="ima1 blur">
           <div class="panel-text">
             Happiest birthday Nicky, always stay happy.<br>
             You’re one of the most precious parts of my life.<br>
@@ -103,15 +110,14 @@ html,body{
         </div>
       </div>
     </div>
-
     <!-- Panel 2 -->
     <div class="panel" id="p2-2">
       <div class="panel-inner">
         <div class="face front">
-          <img src="assets/ima2.jpeg" alt="ima2">
+          <img src="assets/ima2.jpeg" alt="ima2 front">
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/ima2.jpeg" alt="">
+          <img class="blur-image" src="assets/ima2.jpeg" alt="ima2 blur">
           <div class="panel-text">
             Your smile, your heart, your softness…<br>
             I fall for them a little more every day.
@@ -119,15 +125,14 @@ html,body{
         </div>
       </div>
     </div>
-
     <!-- Panel 3 -->
     <div class="panel" id="p2-3">
       <div class="panel-inner">
         <div class="face front">
-          <img src="assets/ima3.jpeg" alt="ima3">
+          <img src="assets/ima3.jpeg" alt="ima3 front">
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/ima3.jpeg" alt="">
+          <img class="blur-image" src="assets/ima3.jpeg" alt="ima3 blur">
           <div class="panel-text">
             No matter where life takes us,<br>
             my feelings for you will always stay the same—<br>
@@ -168,46 +173,43 @@ it all comes from a place that is real inside me.
     <div class="panel" id="p4-1">
       <div class="panel-inner">
         <div class="face front">
-          <!-- show ONE.jpeg as front too so flip reveals back blurred ONE.jpeg -->
-          <img src="assets/ONE.jpeg" alt="one">
+          <img src="assets/ONE.jpeg" alt="one front">
           <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3">
             WHY I LOVE YOU
           </div>
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/ONE.jpeg" alt="">
+          <img class="blur-image" src="assets/ONE.jpeg" alt="one blur">
           <div class="panel-text">I love you because you never give up on us.</div>
         </div>
       </div>
     </div>
-
     <!-- 4-2 -->
     <div class="panel" id="p4-2">
       <div class="panel-inner">
         <div class="face front">
-          <img src="assets/TWO.jpeg" alt="two">
+          <img src="assets/TWO.jpeg" alt="two front">
           <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3">
             MY PROMISES TO YOU
           </div>
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/TWO.jpeg" alt="">
+          <img class="blur-image" src="assets/TWO.jpeg" alt="two blur">
           <div class="panel-text">I promise I'll never let a girl come between us.</div>
         </div>
       </div>
     </div>
-
     <!-- 4-3 -->
     <div class="panel" id="p4-3">
       <div class="panel-inner">
         <div class="face front">
-          <img src="assets/THREE.jpeg" alt="three">
+          <img src="assets/THREE.jpeg" alt="three front">
           <div class="overlay-title" style="position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3">
             THE FUTURE I WANT WITH YOU
           </div>
         </div>
         <div class="face back">
-          <img class="blur-image" src="assets/THREE.jpeg" alt="">
+          <img class="blur-image" src="assets/THREE.jpeg" alt="three blur">
           <div class="panel-text">
             We get married with our parents' permission and work hard.<br>
             We have our own house.<br>
@@ -216,7 +218,6 @@ it all comes from a place that is real inside me.
         </div>
       </div>
     </div>
-
   </div>
 </section>
 
@@ -244,77 +245,76 @@ it all comes from a place that is real inside me.
 </section>
 
 <script>
-/* helper */
+/* show screen helper */
 function showScreen(id){
-  document.querySelectorAll('.screen').forEach(s=>{ s.classList.remove('active'); s.setAttribute('aria-hidden','true'); });
+  document.querySelectorAll('.screen').forEach(s=>{
+    s.classList.remove('active');
+    s.setAttribute('aria-hidden','true');
+  });
   const el = document.getElementById(id);
   if(!el) return;
   el.classList.add('active');
   el.removeAttribute('aria-hidden');
 
-  if(id === 'screen5'){
-    setTimeout(()=> startFinalLoop(), 350);
-  }
+  if(id === 'screen5'){ setTimeout(()=> startFinalLoop(), 350); }
 }
 
-/* audio robust start */
+/* robust audio start: try on open button, plus fallback single-use listeners */
 const bgm = document.getElementById('bgm');
 bgm.volume = 1;
 const openBtn = document.getElementById('openBtn');
 
-async function tryPlayAudio(){
+async function unlockAudio(){
   try{
     bgm.muted = false;
     await bgm.play();
+    return true;
   }catch(e){
-    // If browser still blocks, ensure we try again on the next user gesture
-    // attach a one-time touchstart/click to attempt again
-    const tryOnce = async ()=>{ try{ bgm.muted=false; await bgm.play(); }catch(e){}; document.removeEventListener('click',tryOnce); document.removeEventListener('touchstart',tryOnce); };
-    document.addEventListener('click',tryOnce, {once:true});
-    document.addEventListener('touchstart',tryOnce, {once:true});
+    return false;
   }
 }
 
 openBtn.addEventListener('click', async ()=>{
-  await tryPlayAudio();
+  const ok = await unlockAudio();
+  if(!ok){
+    // add one-time global gesture listeners to unlock on next user interaction
+    const once = async ()=>{ await unlockAudio(); document.removeEventListener('click',once); document.removeEventListener('touchstart',once); };
+    document.addEventListener('click',once);
+    document.addEventListener('touchstart',once);
+  }
   showScreen('screen2');
 });
 
-/* panel flip: rotate whole .panel-inner */
-function setupCardFlips(screenPanelIds, nextScreenAfterAll){
-  const panels = screenPanelIds.map(id=>document.getElementById(id));
+/* card flip logic for screens 2 & 4:
+   - entire .panel element toggles .flipped
+   - .panel-inner rotates 180deg via CSS when .flipped
+   - after all flipped, wait 5s -> next screen
+*/
+function setupFlip(panelIds, nextScreen){
+  const panels = panelIds.map(id=>document.getElementById(id));
   const flipped = panels.map(()=>false);
-
   panels.forEach((panel, idx)=>{
     if(!panel) return;
-    const inner = panel.querySelector('.panel-inner');
-    // front/back already in markup; clicking panel toggles flip (only once)
     panel.addEventListener('click', (ev)=>{
-      // if already flipped ignore
       if(panel.classList.contains('flipped')) return;
-      // add flipped state (will rotate inner)
       panel.classList.add('flipped');
-      // visually rotate the panel-inner
-      inner.style.transform = 'rotateY(180deg)';
+      // mark flipped
       flipped[idx] = true;
-      // when all flipped -> wait 5s then go to next screen
+      // check all flipped
       if(flipped.every(Boolean)){
-        setTimeout(()=> showScreen(nextScreenAfterAll), 5000);
+        setTimeout(()=> showScreen(nextScreen), 5000);
       }
     }, {passive:true});
-    // ensure back click doesn't bubble and cause reflip
+    // ensure back click doesn't re-propagate
     const back = panel.querySelector('.back');
-    if(back){
-      back.addEventListener('click', (ev)=>{ ev.stopPropagation(); }, {passive:true});
-    }
+    if(back) back.addEventListener('click', e=>e.stopPropagation(), {passive:true});
   });
 }
 
-/* initialize screen2 and screen4 flips */
-setupCardFlips(['p2-1','p2-2','p2-3'],'screen3');
-setupCardFlips(['p4-1','p4-2','p4-3'],'screen5');
+setupFlip(['p2-1','p2-2','p2-3'],'screen3');
+setupFlip(['p4-1','p4-2','p4-3'],'screen5');
 
-/* SCREEN 5 slideshow + looping lines */
+/* Screen5 slideshow + looping lines */
 let slideTimer = null;
 function startSlides(){
   const slides = Array.from(document.querySelectorAll('.slide'));
@@ -334,16 +334,13 @@ let finalLoopRunning = false;
 function startFinalLoop(){
   if(finalLoopRunning) return;
   finalLoopRunning = true;
-
   const ids = ['line1','line2','line3','line4','line5'];
   const lines = ids.map(id=>document.getElementById(id));
-  lines.forEach(el=>{ if(el){ el.style.opacity=0; el.style.transform='translateY(10px)'; } });
-
+  lines.forEach(el=>{ if(el){ el.style.opacity=0; el.style.transform='translateY(10px)'; }});
   startSlides();
-
-  function runCycle(){
+  (function runCycle(){
     let delay = 400;
-    lines.forEach((el,i)=>{
+    lines.forEach((el)=>{
       if(!el) return;
       setTimeout(()=>{ el.style.transition='opacity 900ms ease, transform 900ms ease'; el.style.opacity=1; el.style.transform='translateY(0)'; }, delay);
       delay += 1800;
@@ -354,16 +351,18 @@ function startFinalLoop(){
       setTimeout(()=>{ el.style.transition='opacity 900ms ease'; el.style.opacity=0; }, outStart + i*900);
     });
     const totalCycle = outStart + (lines.length * 900) + 500;
-    setTimeout(()=> runCycle(), totalCycle);
-  }
-  runCycle();
+    setTimeout(runCycle, totalCycle);
+  })();
 }
 
-/* initial state */
+/* init */
 window.addEventListener('load', ()=>{
   showScreen('screen1');
-  // reset any transforms
-  document.querySelectorAll('.panel-inner').forEach(pi=>{ pi.style.transform='rotateY(0deg)'; });
+  // ensure no pre-flipped
+  ['p2-1','p2-2','p2-3','p4-1','p4-2','p4-3'].forEach(id=>{
+    const el = document.getElementById(id);
+    if(el) el.classList.remove('flipped');
+  });
 });
 </script>
 </body>
