--- a/index.html
+++ b/index.html
@@ -12,20 +12,12 @@
 }
 *{box-sizing:border-box}
 html,body{
-  height:100%;
-  width:100%;
-  margin:0;
-  background:var(--bg);
-  font-family:Poppins,system-ui,Arial;
-  overflow:hidden;
-  -webkit-tap-highlight-color:transparent;
+  height:100%;width:100%;margin:0;background:var(--bg);
+  font-family:Poppins,system-ui,Arial;overflow:hidden;-webkit-tap-highlight-color:transparent;
 }
 
-/* base screens */
-.screen{
-  position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;
-  opacity:0;pointer-events:none;transition:opacity .45s ease;
-}
+/* screens */
+.screen{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;opacity:0;pointer-events:none;transition:opacity .45s ease}
 .screen.active{opacity:1;pointer-events:auto}
 .bg{position:absolute;inset:0;background-size:cover;background-position:center;filter:brightness(.92);z-index:0}
 .wrap{position:relative;z-index:6;width:92%;max-width:960px;margin:0 auto;text-align:center;color:var(--white)}
@@ -34,29 +26,32 @@ html,body{
 #screen1 .wrap{padding-top:12vh}
 .title1{font-size:clamp(20px,6vw,36px);font-weight:900;text-shadow:0 10px 30px rgba(0,20,40,0.7)}
 .subtitle1{font-size:clamp(12px,3.4vw,18px);opacity:.95;margin-top:.4rem}
-.tap-btn{
-  margin-top:1.2rem;padding:.9rem 2.6rem;border-radius:28px;border:0;
-  background:linear-gradient(180deg,rgba(255,255,255,0.08),rgba(255,255,255,0.03));
-  backdrop-filter:blur(6px);box-shadow:0 12px 40px rgba(10,30,60,0.3);
-  color:var(--white);font-weight:800;cursor:pointer;outline:none}
+.tap-btn{margin-top:1.2rem;padding:.9rem 2.6rem;border-radius:28px;border:0;background:linear-gradient(180deg,rgba(255,255,255,0.08),rgba(255,255,255,0.03));backdrop-filter:blur(6px);box-shadow:0 12px 40px rgba(10,30,60,0.3);color:var(--white);font-weight:800;cursor:pointer;outline:none}
 
 /* panels (screen2 & screen4) */
 .panel-container{width:92%;height:86%;display:flex;flex-direction:column;gap:18px;padding:3vh 0;justify-content:space-between;z-index:5}
 .panel{height:30%;min-height:100px;border-radius:14px;overflow:visible;position:relative;cursor:pointer;perspective:1400px}
-.panel-inner{
-  position:relative;width:100%;height:100%;transform-style:preserve-3d;
-  transition:transform .6s cubic-bezier(.2,.9,.28,1);border-radius:12px;overflow:hidden;
-  box-shadow:0 16px 50px rgba(0,20,40,0.35);
-}
-/* rotated state */
+.panel-inner{position:relative;width:100%;height:100%;transform-style:preserve-3d;transition:transform .6s cubic-bezier(.2,.9,.28,1);border-radius:12px;overflow:hidden;box-shadow:0 16px 50px rgba(0,20,40,0.35);}
+/* IMPORTANT: rotate inner when panel has 'flipped' class */
 .panel.flipped .panel-inner{transform:rotateY(180deg)}
+
+/* faces */
 .face{position:absolute;inset:0;backface-visibility:hidden;display:flex;align-items:center;justify-content:center;overflow:hidden}
 .front{z-index:2;transform:rotateY(0deg)}
 .front img{width:100%;height:100%;object-fit:cover;display:block}
-.front .overlay-title{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;background:transparent}
+.front .overlay-title{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:clamp(14px,4vw,20px);z-index:3;background:transparent;pointer-events:none}
+
+/* BACK SIDE */
 .back{transform:rotateY(180deg);display:flex;align-items:center;justify-content:center;padding:18px;text-align:center;background:rgba(0,0,0,0.18)}
 .back .blur-image{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:blur(8px) brightness(.85);transform:scale(1.02);z-index:1}
 .back .panel-text{position:relative;z-index:3;font-size:clamp(12px,3vw,18px);line-height:1.45;text-shadow:0 6px 18px rgba(0,0,0,0.6);color:white}
+
+/* Z-INDEX swap fix:
+   When panel is flipped, place back above front so front overlay isn't drawn over back.
+   This prevents the "front text showing backwards" bug.
+*/
+.panel.flipped .front{z-index:0}
+.panel.flipped .back{z-index:2}
 
 /* letter page */
 .letter-wrap{width:92%;max-width:920px;background:rgba(255,255,255,0.06);backdrop-filter:blur(6px);border-radius:14px;padding:26px;color:#fff;box-shadow:0 20px 60px rgba(0,20,40,0.5);z-index:5}
@@ -110,6 +105,7 @@ html,body{
         </div>
       </div>
     </div>
+
     <!-- Panel 2 -->
     <div class="panel" id="p2-2">
       <div class="panel-inner">
@@ -125,6 +121,7 @@ html,body{
         </div>
       </div>
     </div>
+
     <!-- Panel 3 -->
     <div class="panel" id="p2-3">
       <div class="panel-inner">
@@ -184,6 +181,7 @@ it all comes from a place that is real inside me.
         </div>
       </div>
     </div>
+
     <!-- 4-2 -->
     <div class="panel" id="p4-2">
       <div class="panel-inner">
@@ -199,6 +197,7 @@ it all comes from a place that is real inside me.
         </div>
       </div>
     </div>
+
     <!-- 4-3 -->
     <div class="panel" id="p4-3">
       <div class="panel-inner">
@@ -259,12 +258,12 @@ function showScreen(id){
   if(id === 'screen5'){ setTimeout(()=> startFinalLoop(), 350); }
 }
 
-/* robust audio start: try on open button, plus fallback single-use listeners */
+/* Audio unlock — try on button, then attach multiple fallback gestures */
 const bgm = document.getElementById('bgm');
 bgm.volume = 1;
 const openBtn = document.getElementById('openBtn');
 
-async function unlockAudio(){
+async function tryUnlockAudio(){
   try{
     bgm.muted = false;
     await bgm.play();
@@ -275,37 +274,37 @@ async function unlockAudio(){
 }
 
 openBtn.addEventListener('click', async ()=>{
-  const ok = await unlockAudio();
+  const ok = await tryUnlockAudio();
   if(!ok){
-    // add one-time global gesture listeners to unlock on next user interaction
-    const once = async ()=>{ await unlockAudio(); document.removeEventListener('click',once); document.removeEventListener('touchstart',once); };
-    document.addEventListener('click',once);
-    document.addEventListener('touchstart',once);
+    // add fallback one-time listeners for any gesture
+    const attempt = async ()=>{ await tryUnlockAudio(); removeGestureUnlock(); };
+    function removeGestureUnlock(){ document.removeEventListener('click',attempt); document.removeEventListener('touchstart',attempt); document.removeEventListener('keydown',attempt); document.removeEventListener('scroll',attempt); }
+    document.addEventListener('click', attempt, {passive:true});
+    document.addEventListener('touchstart', attempt, {passive:true});
+    document.addEventListener('keydown', attempt, {passive:true});
+    document.addEventListener('scroll', attempt, {passive:true});
   }
   showScreen('screen2');
 });
 
-/* card flip logic for screens 2 & 4:
-   - entire .panel element toggles .flipped
-   - .panel-inner rotates 180deg via CSS when .flipped
-   - after all flipped, wait 5s -> next screen
+/* Card flip logic: toggle .flipped class on panel element.
+   CSS handles rotation of .panel-inner; we swap z-index so front doesn't overlay the back when flipped.
+   After all panels flipped -> wait 5s -> next screen.
 */
 function setupFlip(panelIds, nextScreen){
-  const panels = panelIds.map(id=>document.getElementById(id));
+  const panels = panelIds.map(id => document.getElementById(id));
   const flipped = panels.map(()=>false);
   panels.forEach((panel, idx)=>{
     if(!panel) return;
     panel.addEventListener('click', (ev)=>{
       if(panel.classList.contains('flipped')) return;
       panel.classList.add('flipped');
-      // mark flipped
       flipped[idx] = true;
-      // check all flipped
       if(flipped.every(Boolean)){
         setTimeout(()=> showScreen(nextScreen), 5000);
       }
     }, {passive:true});
-    // ensure back click doesn't re-propagate
+    // prevent back clicks from re-triggering parent
     const back = panel.querySelector('.back');
     if(back) back.addEventListener('click', e=>e.stopPropagation(), {passive:true});
   });
@@ -314,7 +313,7 @@ function setupFlip(panelIds, nextScreen){
 setupFlip(['p2-1','p2-2','p2-3'],'screen3');
 setupFlip(['p4-1','p4-2','p4-3'],'screen5');
 
-/* Screen5 slideshow + looping lines */
+/* SCREEN 5 slideshow + looping final lines */
 let slideTimer = null;
 function startSlides(){
   const slides = Array.from(document.querySelectorAll('.slide'));
@@ -358,7 +357,7 @@ function startFinalLoop(){
 /* init */
 window.addEventListener('load', ()=>{
   showScreen('screen1');
-  // ensure no pre-flipped
+  // ensure clean state
   ['p2-1','p2-2','p2-3','p4-1','p4-2','p4-3'].forEach(id=>{
     const el = document.getElementById(id);
     if(el) el.classList.remove('flipped');
